...
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="Match Name"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/viewProfileButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/viewProfileButton"
                android:layout_width="wrap_content"
...
